fix( index,styles ) : changes in the ilustration mobile and name of the page

--- a/styles.css
+++ b/styles.css
@@ -110,13 +110,13 @@ body {
 .column-right {
   grid-column: 2 / 3;
   grid-row: 1 / 3;
-  overflow: hidden;
+  
 }
 
 .column-right img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* Triángulo con logos */
@@ -147,7 +147,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 10px;
+  gap: 1px;
   justify-items: center;
   align-items: center;
 }
@@ -245,8 +245,8 @@ body {
   gap: 10px;
   color: white;
   text-decoration: none;
-  font-weight: bold;
-  font-size: 16px;
+  
+  font-size: 0.75rem;
 }
 
 .footer-link img {
@@ -363,12 +363,12 @@ body {
   }
 
   .column-right img {
-    max-width: 80%;
+    max-width: 65%;
     height: auto;
     margin-top: 20px;
     position: absolute;
     bottom: 5%;
-    left: 11%;
+    left: 20%;
     z-index: -1;
   }
 
@@ -383,12 +383,13 @@ body {
 
   .triangle-layout {
     margin-top: -100%;
-    margin-bottom: 10%;
+    margin-bottom: 15%;
   }
 
   .sub-title-image {
 
-    margin-top: -330px;
+    margin-top: -80%;
+    max-width: 150px !important;
   }
 
 
